# navcoin-core

./: #README.md#  .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  INSTALL  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac  configure.tmp  docker-compose.yml  libnavcoinconsensus.pc.in  libvancoinconsensus.pc.in  main.cpp  navcoin-matt.files  navcoin-matt.includes  social-bot.md  versionbits.cpp
src/: #amount.h#  #coins.h#  CMakeLists.txt  DeVault4-Qt.files  Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  NavCoin-4.0.files  NavCoin4-Qt.creator.user.4.8-pre1  NavCoin4-Qt.files  NavCoin4-Qt.includes  NavCoin4.files  NavCoin4.includes  addressindex.h  addrman.cpp  addrman.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bignum.h  blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clientversion.cpp  (+138 more)
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_navcoin.cpp  crypto_hash.cpp
src/bls/: CMakeLists.txt
src/blsct/: aggregationsession.cpp  aggregationsession.h  bulletproofs.cpp  bulletproofs.h  ephemeralserver.cpp  ephemeralserver.h  key.h  mixsession.cpp  mixsession.h  p2pmessage.cpp  rpc.cpp  rpc.h  scalar.cpp  scalar.h  transaction.cpp  transaction.h  types.cpp  types.h  verification.cpp  verification.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: navcoin-config.h  navcoin-config.h.in
src/consensus/: cfund.cpp  cfund.cpp.autosave  cfund.h  consensus.h  dao.cpp  dao.h  daoconsensusparams.h  merkle.cpp  merkle.h  params.h  program_actions.h  programs.cpp  programs.h  validation.h
src/crypto/: aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.cpp  sha256.h  sha512.h
src/ctokens/: ctokens.h  tokenid.h  tokenutxos.h
src/dotnav/: namedata.h  namerecord.h  namerecordname.h  names.cpp  names.h
src/libzerocoin/: Accumulator.cpp  Accumulator.h  AccumulatorProofOfKnowledge.cpp  AccumulatorProofOfKnowledge.h  ArithmeticCircuit.cpp  ArithmeticCircuit.h  Bulletproofs.cpp  Bulletproofs.h  BulletproofsRangeproof.cpp  BulletproofsRangeproof.h  CMakeLists.txt  Coin.cpp  Coin.h  CoinSpend.cpp  CoinSpend.h  Commitment.h  Denominations.cpp  Denominations.h  Keys.cpp  Keys.h  Math.cpp  Math.h  ParamGeneration.cpp  ParamGeneration.h  Params.cpp  Params.h  PolynomialCommitment.cpp  PolynomialCommitment.h  SerialNumberProofOfKnowledge.cpp  SerialNumberProofOfKnowledge.h  SerialNumberSignatureOfKnowledge.cpp  SerialNumberSignatureOfKnowledge.h  SerialNumberSoK_small.cpp  SerialNumberSoK_small.h  SpendType.h  ZerocoinDefines.h  bignum.cpp  bignum.h  bignum_gmp.cpp  bignum_openssl.cpp  (+4 more)
src/libzeroct/: Accumulator.cpp  Accumulator.h  AccumulatorProofOfKnowledge.cpp  AccumulatorProofOfKnowledge.h  BulletproofsRangeproof.cpp  BulletproofsRangeproof.h  Coin.cpp  Coin.h  CoinSpend.cpp  CoinSpend.h  Commitment.cpp  Commitment.h  Keys.cpp  Keys.h  Math.cpp  Math.h  ParamGeneration.cpp  ParamGeneration.h  Params.cpp  Params.h  SerialNumberProofOfKnowledge.cpp  SerialNumberProofOfKnowledge.h  SerialNumberSignatureOfKnowledge.cpp  SerialNumberSignatureOfKnowledge.h  SpendType.h  ZerocoinDefines.h  bignum.cpp  bignum.h  bignum_gmp.cpp  bignum_openssl.cpp  paramgen.cpp
src/mcl/: CMakeLists.txt  Makefile
src/mnemonic/: arrayslice.h  dictionary.cpp  dictionary.h  generateseed.cpp  generateseed.h  mnemonic.cpp  mnemonic.h  walletinitflags.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: #devaultunits.cpp#  #devaultunits.h#  #overviewpage.cpp#  CMakeLists.txt  DeVault4.files  NavCoin4.files  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  aggregationsession.cpp  aggregationsession.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  coldstakingwizard.cpp  coldstakingwizard.h  communityfundcreatepaymentrequestdialog.cpp  communityfundcreatepaymentrequestdialog.h  communityfundcreateproposaldialog.cpp  communityfundcreateproposaldialog.h  communityfunddisplay.cpp  communityfunddisplay.h  communityfunddisplay.ui  communityfunddisplaydetailed.cpp  communityfunddisplaydetailed.h  communityfunddisplaypaymentrequest.cpp  communityfunddisplaypaymentrequest.h  communityfunddisplaypaymentrequest.ui  communityfunddisplaypaymentrequestdetailed.cpp  communityfunddisplaypaymentrequestdetailed.h  communityfunddisplaypaymentrequestdetailed.ui  communityfundpage.cpp  (+185 more)
src/rpc/: #net.cpp#  blockchain.cpp  client.cpp  client.h  mining.cpp  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: devaultconsensus.cpp  devaultconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  navcoinconsensus.cpp  navcoinconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  configure.ac
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  benchmark_zerocoin.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  blsct_tests.cpp  blsct_wallet.cpp  bulletproofsrangeproof_tests.cpp  cfund_tests.cpp  cfunddb_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  devault-util-test.py  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  libzerocoin_tests.cpp  (+48 more)
(+936 files in other folders)
